deploy/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
      tier: web
  template:
    metadata:
      labels:
        app: hello
        tier: web
    spec:
      containers:
        - name: hello-app
          image: ghcr.io/blazeisclone/spaceops-mission-ctrl:v0.0.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
