deploy/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mission-ctrl-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: spaceops-mission-ctrl-ipv4
  labels:
    app: mission-ctrl
spec:
  rules:
    - host: "mission-ctrl.blaze64.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mission-ctrl-service
                port:
                  number: 80
